# anchor-droplet-chip

./: .gitignore  .latest.params.yaml  .pre-commit-config.yaml  20221125-Madison.ipynb  Align droplet centers.ipynb  README.md  Snakefile  add10px.py  cellpose_api.sh  conda-env.yaml  conda.env  config.yaml  example.ipynb  find_all_big_nd2.ipynb  ome-zarr.ipynb  projections.ipynb  pyproject.toml  segment_cellpose.py  setup.cfg  skew_merge.ipynb  test_data.yaml  test_data_0h.yaml  test_data_24h.yaml  tox.ini  zenodo.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
scripts/: merge_all.py
src/adc/: _align_widget.py  _amend_widget.py  _combine_widget.py  _count_widget.py  _manual_rois.py  _progress_widget.py  _projection_stack.py  _reader.py  _sample_data.py  _segment_widget.py  _split_stack.py  _sub_stack.py  _widget.py  align.py  count.py  intensity.py  io.py  merge.py  napari.yaml
src/adc/cli/: __main__.py  projection.py
src/adc/tests/: test_align.py  test_count.py  test_projection.py  test_reader.py  test_single_tif.py  test_split.py  test_stack.py  test_substack.py
src/adc/tools/: log_decorator.py
src/adc/yeast/: merge_tables.py
src/adc/yeast/cellpose/: measure.py  segment.py
src/adc/yeast/cellpose/measure/: intensities.py  plot.py
src/adc/yeast/manual_labels/concat/: plots.py  tables.py
src/adc/yeast/manual_labels/measure/: intensities.py  plot.py
src/adc/yeast/plot/: merged.py  single.py  tools.py
