[metadata]
name = anchor_droplet_chip
description = Segment organoids and measure intensities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaristov/napari-segment
author = Andrey Aristov
author_email = aaristov@pasteur.fr
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
project_urls =
    Source Code = https://github.com/BaroudLab/anchor-droplet-chip

[options]
packages = find:
install_requires =
    fire
    imreg-dft
    jupyterlab
    matplotlib
    napari
    nd2
    numpy
    pandas
    pyqt5
    pyyaml
    scikit-image
    scipy
    seaborn
    snakemake
    tifffile
    zarr-tools@git+https://gitlab.pasteur.fr/aaristov/zarr-tools.git
    zenodo-get
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    anchor-droplet-chip = adc:napari.yaml

[flake8]
ignore = E203
select = E9,F63,F7,F82
